k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-server
  namespace: game-server
  labels:
    app: game-server
spec:
  type: ClusterIP
  selector:
    app: game-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
